fixed fichadas
